# teste

./: .gitignore  CMakeLists.txt  README.md  Texto.txt  saida.cpp
headers/: Artists.h  Tracks.h
sources/: Artists.cpp  Tracks.cpp  main.cpp
